--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -7,44 +7,28 @@
           <div class="h1">{{ WorldCase?.confirmed | number }}</div>
           <div>Total Cases</div>
         </div>
-        <!-- <div class="overview-card-right">
-          <div class="overview-card-icon">
-            <i class="fas fa-virus"></i>
-          </div>
-        </div> -->
+        
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
           <div class="h1">{{ WorldCase?.recovered | number }}</div>
           <div>Recovered</div>
         </div>
-        <!-- <div class="overview-card-right">
-          <div class="overview-card-icon">
-            <i class="fas fa-running"></i>
-          </div>
-        </div> -->
+        
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
           <div class="h1">{{ WorldCase?.deaths | number }}</div>
           <div>Deaths</div>
         </div>
-        <!-- <div class="overview-card-right">
-          <div class="overview-card-icon">
-            <i class="fas fa-ghost"></i>
-          </div>
-        </div> -->
+        
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
           <div class="h1">{{ FaltiRate.toFixed(2) }}<span>%</span></div>
           <div>Fatality rate</div>
         </div>
-        <!-- <div class="overview-card-right">
-          <div class="overview-card-icon">
-            <i class="fas fa-book-dead"></i>
-          </div>
-        </div> -->
+        
       </div>
     </div>
   </div>
@@ -61,6 +45,7 @@
           <app-map></app-map>
         </div>
       </div>
+<!--       
       <div class="somethings">
         <p class="font-weight-bold details-header">Country Details</p>
         <div class="details">
@@ -97,4 +82,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
