--- a/src/app/dash-board/map/map.component.html
+++ b/src/app/dash-board/map/map.component.html
@@ -1,5 +1,11 @@
-<div class="map-container">
-  <div class="map-frame">
-    <div id="map"></div>
-  </div>
-</div>
+<!-- <div class="map" leaflet [leafletOptions]="options"></div> -->
+<highcharts-chart
+  id="container"
+  [Highcharts]="Highcharts"
+  [constructorType]="chartConstructor"
+  [options]="chartOptions"
+  (chartInstance)="onChartInstance($event)"
+  style="width: 100%; height: 400px; display: block"
+  
+>
+</highcharts-chart>
