--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -45,7 +45,7 @@
           <app-map></app-map>
         </div>
       </div>
-<!--       
+      
       <div class="somethings">
         <p class="font-weight-bold details-header">Country Details</p>
         <div class="details">
@@ -77,9 +77,11 @@
       <div class="app-region">
         <app-region (eventClick)="GetSelectedVal($event)"></app-region>
       </div>
+
       <div class="app-chart">
         <router-outlet></router-outlet>
       </div>
+      
     </div>
   </div>
-</section> -->
+</section>
