--- a/src/app/dash-board/region/region.component.html
+++ b/src/app/dash-board/region/region.component.html
@@ -1,56 +1,55 @@
-<!-- <div class="mat-elevation-z8 d-flex">
+<div class="mat-elevation-z8 d-flex">
   <div class="table-header d-flex justify-content-between">
-  <div class="font-weight-bold">Effected Top Countries</div> -->
-  <div class="search">
+    <div class="font-weight-bold">Effected Top Countries</div>
+    <!-- <div class="search">
     
       <input matInput #filter (keyup)="applyFilter(filter.value)" placeholder="Search">
     
+  </div> -->
   </div>
-  <!-- </div> -->
   <!-- <mat-progress-bar mode="query" *ngIf="isCompleted"></mat-progress-bar> -->
 
-  <!-- <div class="table-container">
-    <table mat-table [dataSource]="dataSource" matSort> -->
+  <div class="table-container">
+    <table mat-table [dataSource]="dataSource" matSort>
       <!-- Position Column -->
-      <!-- <ng-container matColumnDef="countryregion"> -->
-        <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th> -->
+      <ng-container matColumnDef="countryregion">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th>
         <!-- [routerLink]="['/dashboard',element?.countrycode?.iso2 ]" -->
-        <!-- <button>
-          <td mat-cell class="mat-cell-country" *matCellDef="let element" (click)="Cleck(element?.countrycode?.iso2)" >
-            {{ element.countryregion}}
-          </td>
-        </button> -->
-        
-  
-      <!-- </ng-container> -->
-  
+
+        <td mat-cell class="mat-cell-country" *matCellDef="let element"
+          (click)="Cleck(element?.countrycode?.iso2)">
+          {{ element.countryregion}}
+        </td>
+
+      </ng-container>
+
       <!-- Name Column -->
-      <!-- <ng-container matColumnDef="confirmed"> -->
-        <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Cases</th> -->
-        <!-- <td mat-cell *matCellDef="let element"> -->
-          <!-- {{ element.confirmed | number }} -->
-        <!-- </td> -->
-      <!-- </ng-container> -->
-  
+      <ng-container matColumnDef="confirmed">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Total Cases</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.confirmed | number }}
+        </td>
+      </ng-container>
+
       <!-- Weight Column -->
-      <!-- <ng-container matColumnDef="deaths"> -->
-        <!-- <th mat-header-cell *matHeaderCellDef mat-sort-header>Deaths</th>
+      <ng-container matColumnDef="deaths">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Deaths</th>
         <td mat-cell *matCellDef="let element">{{ element.deaths | number }}</td>
-      </ng-container> -->
-  
+      </ng-container>
+
       <!-- Fatality rate -->
-      <!-- <ng-container matColumnDef="Fatality rate">
+      <ng-container matColumnDef="Fatality rate">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Fatality rate</th>
         <td mat-cell *matCellDef="let element">
           {{ CalRate(element.deaths, element.confirmed).toFixed(2) }}
           <span>%</span>
         </td>
-      </ng-container> -->
-  
+      </ng-container>
+
       <!-- Header -->
-      <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
   </div>
-</div> -->
+</div>
