--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
-<!-- <div class="spinner">
+<div class="spinner">
     <mat-spinner *ngIf="PreLoadingPage" color="primary"></mat-spinner>
-</div> -->
+</div>
 <router-outlet></router-outlet>
+<footer>
+    <div class="text-center p-2 text-white">
+        <p>Group 2 - Corona Dashboard</p>
+      </div>
+</footer>
