--- a/src/app/dash-board/linearea-charts/linearea-charts.component.html
+++ b/src/app/dash-board/linearea-charts/linearea-charts.component.html
@@ -1,10 +1,10 @@
 <div class="d-flex justify-content-between">
-  <div class="font-weight-bold ml-3">New Dead Case Covid-19</div>
-  <div>
-    <!-- <button mat-button (click)="OnUpdateVal('All')" color="accent">All</button>
-    <button mat-button (click)="OnUpdateVal('2month')" color="accent">2 months</button>
-    <button mat-button (click)="OnUpdateVal('month')" color="accent"> Month</button>
-    <button mat-button (click)="OnUpdateVal('week')" color="accent"> Week</button>  -->
+  <div class="font-weight-bold ml-3">Daily confirmed COVID-19 cases and deaths </div>
+  <div >
+    <button mat-button (click)="OnUpdateVal('week')" color="accent"> Week</button>
+    <button mat-button (click)="OnUpdateVal('All')" color="accent">All</button>
+    <!-- <button mat-button (click)="OnUpdateVal('2month')" color="accent">2 months</button>
+    <button mat-button (click)="OnUpdateVal('month')" color="accent"> Month</button> -->
     <!-- <button mat-button [matMenuTriggerFor]="menu" class="">Filter</button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="OnUpdateVal('All')">All</button>
@@ -15,5 +15,5 @@
   </div>
 </div>
 <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions" ref="chart"
-  style="width: 100%; height: 100%; display: inline-block">
+  style="width: 100%; height: 100%; display: block">
 </highcharts-chart>
