--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     <mat-spinner *ngIf="PreLoadingPage" color="primary"></mat-spinner>
 </div>
 <router-outlet></router-outlet>
-<footer>
+<!-- <footer>
     <div class="text-center p-2 text-white">
         <p>Group 2 - Corona Dashboard</p>
       </div>
-</footer>
+</footer> -->
