--- a/src/app/dash-board/dash-board.component.html
+++ b/src/app/dash-board/dash-board.component.html
@@ -4,31 +4,47 @@
     <div class="card-container">
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
-          <div class="h1">{{ WorldCase?.confirmed | number }}</div>
+          <div class="h4">{{ WorldCase?.confirmed | number }}</div>
           <div>Total Cases</div>
         </div>
-        
+        <div class="overview-card-right">
+          <div class="overview-card-icon">
+            <i class="fas fa-head-side-virus"></i>
+          </div>
+        </div>
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
-          <div class="h1">{{ WorldCase?.recovered | number }}</div>
+          <div class="h4">{{ WorldCase?.recovered | number }}</div>
           <div>Recovered</div>
         </div>
-        
+        <div class="overview-card-right">
+          <div class="overview-card-icon">
+            <i class="fas fa-book-medical"></i>
+          </div>
+        </div>
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
-          <div class="h1">{{ WorldCase?.deaths | number }}</div>
+          <div class="h4">{{ WorldCase?.deaths | number }}</div>
           <div>Deaths</div>
         </div>
-        
+        <div class="overview-card-right">
+          <div class="overview-card-icon">
+            <i class="fas fa-book-dead"></i>
+          </div>
+        </div>
       </div>
       <div class="overview-card d-flex justify-content-between">
         <div class="overview-card-left">
-          <div class="h1">{{ FaltiRate.toFixed(2) }}<span>%</span></div>
+          <div class="h4">{{ FaltiRate.toFixed(2) }}<span>%</span></div>
           <div>Fatality rate</div>
         </div>
-        
+        <div class="overview-card-right">
+          <div class="overview-card-icon">
+            <i class="fas fa-percent"></i>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -45,7 +61,6 @@
           <app-map></app-map>
         </div>
       </div>
-      
       <div class="somethings">
         <p class="font-weight-bold details-header">Country Details</p>
         <div class="details">
@@ -55,7 +70,7 @@
           </div>
           <div class="details-cards">
             <div class="details-card-title">Recovered</div>
-            <div class="details-card-number recovered">{{ recovereddCountry | number }}</div>
+            <div class="details-card-number recovered">{{ recoveredCountry | number }}</div>
           </div>
           <div class="details-cards">
             <div class="details-card-title">Deaths</div>
@@ -77,11 +92,9 @@
       <div class="app-region">
         <app-region (eventClick)="GetSelectedVal($event)"></app-region>
       </div>
-
       <div class="app-chart">
         <router-outlet></router-outlet>
       </div>
-      
     </div>
   </div>
 </section>
