--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -4,15 +4,19 @@
     <article class="article-content" *ngFor="let article of Data">
         <div class="wraper row">
             <div class="Content-img col-lg-6">
-                <img src="{{article.img}}" width="100%" height="350px" class="img-responsive" alt="">
+                <img src="{{article.urlToImage}}" width="100%" height="350px" class="img-responsive" alt="">
             </div>
             <div class="Content_tittle col-lg-6 d-flex flex-column align-items-end">
                 <h2>{{article.title}}</h2>
-                <p class="Content ">{{article.details}} </p>
+                
+                <!-- <p class="Content ">{{article.details}} </p> -->
+
                 <div class="linkroute mt-auto">
-                    <h2 class="h2_rout"><a [routerLink]="['NewsDetails',article.id]" routerLinkActive="active"
+                    <h2 class="h2_rout"><a [routerLink]="['NewsDetails','theNews',article]"
+                            [queryParams]="{theNews: article | json }" routerLinkActive="active"
                             class="btn btn-primary d-flex justify-content-between">Read More</a></h2>
                 </div>
+
             </div>
         </div>
         <hr>
